Fix horizontal alignment

--- a/viewer/display.css
+++ b/viewer/display.css
@@ -4,6 +4,18 @@ body {
   font-family: "Segoe UI", Arial, sans-serif;
 }
 
+.content {
+  margin: auto;
+  width: 97%;
+}
+
+@media (max-resolution: 150dpi), (min-width: 1000px) {
+  .content {
+    width: 90%;
+    max-width: 50em;
+  }
+}
+
 #title, #titleimage {
   margin-top: 20px;
   margin-left: 30px;
@@ -35,17 +47,16 @@ h1 {
   font-size: 4em;
 }
 
-.error {
+h2, .error {
   font-size: 2em;
   font-style: italic;
-  color: #f88;
   font-weight: lighter;
 }
 
+.error { color: #f88; }
 .hidden { display: none !important; }
 
 ol, ul { list-style-type: none; }
-
 
 .header { background-color: #333; }
 
@@ -117,6 +128,7 @@ ol, ul { list-style-type: none; }
   padding-left: 10px;
   background-color: #555;
   transition: padding-left 0.5s, background-color 0.5s, color 0.5s;
+  position: relative;
 }
 
 .meta { font-weight: bold; }
